--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,5 +1,5 @@
 .page-login {
-  background-color: #4a0404;
+  background-color: #424242;
   border-radius: 5px;
   padding: 20px;
   height: 100vh;
