--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,5 +1,5 @@
 .page-login {
-  background-color: #424242;
+  background-color: rgba(146, 146, 146, 0.582);
   border-radius: 5px;
   padding: 20px;
   height: 100vh;
@@ -16,7 +16,7 @@
 }
 
 .login-form {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.623);
   border-radius: 4px;
   border: 1.5px solid rgb(101, 219, 4);
   box-shadow: 5px 3px rgb(112, 109, 108);
@@ -29,7 +29,6 @@
 }
 
 .title-login {
-  color: rgb(23, 24, 23);
   font-weight: 600;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: larger;
@@ -38,6 +37,7 @@
 }
 
 .email , .password {
+  background-color: rgba(255, 255, 255, 0.623);
   border: none;
   border-bottom: 2px solid rgb(2, 110, 2);
   display: flex;
